--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^16.8.0 || ^17 || ^18"
   },
   "devDependencies": {
+    "@codecov/vite-plugin": "1.9.1",
     "@size-limit/preset-small-lib": "11.2.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
