--- a/website/package.json
+++ b/website/package.json
@@ -9,27 +9,31 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "next": "10.0.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "15.3.5",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-responsive-modal": "workspace:react-responsive-modal"
   },
   "devDependencies": {
-    "@mdx-js/loader": "1.6.21",
-    "@next/mdx": "10.0.1",
-    "@tailwindcss/typography": "0.2.0",
-    "@types/node": "14.14.7",
+    "@mdx-js/loader": "3.1.0",
+    "@mdx-js/react": "3.1.0",
+    "@next/mdx": "15.3.5",
+    "@tailwindcss/postcss": "4.1.11",
+    "@tailwindcss/typography": "0.5.16",
+    "@types/mdx": "2.0.13",
+    "@types/node": "22.8.2",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
-    "fathom-client": "3.0.0",
+    "fathom-client": "3.7.2",
     "highlight.js": "10.3.2",
+    "postcss": "8.5.6",
     "rehype-autolink-headings": "5.0.1",
     "rehype-slug": "4.0.1",
     "remark-code-import": "0.2.0",
     "remark-highlight.js": "6.0.0",
-    "tailwindcss": "1.9.6",
+    "tailwindcss": "4.1.11",
     "typeface-inter": "1.1.13",
-    "typescript": "4.0.5"
+    "typescript": "5.8.3"
   },
   "license": "MIT"
 }
