--- a/website/package.json
+++ b/website/package.json
@@ -25,14 +25,13 @@
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
     "fathom-client": "3.7.2",
-    "highlight.js": "10.3.2",
+    "highlight.js": "11.11.1",
     "postcss": "8.5.6",
-    "rehype-autolink-headings": "5.0.1",
-    "rehype-slug": "4.0.1",
-    "remark-code-import": "0.2.0",
-    "remark-highlight.js": "6.0.0",
+    "rehype-autolink-headings": "7.1.0",
+    "rehype-highlight": "7.0.2",
+    "rehype-slug": "6.0.0",
+    "remark-code-import": "1.2.0",
     "tailwindcss": "4.1.11",
-    "typeface-inter": "1.1.13",
     "typescript": "5.8.3"
   },
   "license": "MIT"
