--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -87,7 +87,7 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
-    "./styles.css": "./styles.css",
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    "./styles.css": "./styles.css"
   }
 }
