--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,36 +12,29 @@ jobs:
 
     steps:
       - name: Begin CI...
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Use Node 12
-        uses: actions/setup-node@v1
+      - name: Use Node 22
+        uses: actions/setup-node@v4
         with:
-          node-version: 12.x
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          node-version: 22.x
+          cache: 'yarn'
 
       - name: Install dependencies
         run: yarn install --immutable
 
-      - name: Lint
-        run: yarn workspace react-responsive-modal lint
+      - name: Typecheck
+        run: yarn workspace react-responsive-modal typecheck
 
       - name: Test
-        run: yarn workspace react-responsive-modal test --ci --coverage --maxWorkers=2
+        run: yarn workspace react-responsive-modal test --coverage
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Report coverage
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Build
         run: yarn workspace react-responsive-modal build
@@ -50,10 +43,13 @@ jobs:
         run: yarn workspace website build
 
       - name: Cypress run
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v6
         with:
           # Dependencies already installed before
           install: false
           # Use monorepo
           project: ./react-responsive-modal
           start: yarn workspace website start -p 3000
+
+      - name: Size limit
+        run: yarn workspace react-responsive-modal size
