--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -55,7 +55,7 @@
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17 || ^18 || ^19",
-    "react-dom": "*"
+    "react-dom": "^16.8.0 || ^17 || ^18 || ^19"
   },
   "devDependencies": {
     "@codecov/vite-plugin": "1.9.1",
