--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -49,13 +49,13 @@
     }
   ],
   "dependencies": {
-    "@bedrock-layout/use-forwarded-ref": "^1.3.1",
+    "@bedrock-layout/use-forwarded-ref": "^2.0.17",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.3.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17 || ^18",
-    "react-dom": "^16.8.0 || ^17 || ^18"
+    "react": "^16.8.0 || ^17 || ^18 || ^19",
+    "react-dom": "^16.8.0 || ^17 || ^18 || ^19"
   },
   "devDependencies": {
     "@codecov/vite-plugin": "1.9.1",
@@ -63,18 +63,18 @@
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
-    "@types/body-scroll-lock": "2.6.1",
-    "@types/classnames": "2.2.11",
-    "@types/node": "22.8.2",
-    "@types/react": "16.9.56",
-    "@types/react-dom": "16.9.9",
+    "@types/body-scroll-lock": "2.6.2",
+    "@types/classnames": "2.3.4",
+    "@types/node": "22.16.3",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.6.0",
     "@vitest/coverage-istanbul": "3.2.4",
     "cypress": "14.5.1",
     "jsdom": "26.1.0",
     "publint": "0.3.12",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "size-limit": "11.2.0",
     "tsdown": "0.12.9",
     "tslib": "2.8.1",
