--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,10 +1,17 @@
 {
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "bootstrap-sha": "acfe228892c4dcc86ad48e9f18f50c49f56f17b0",
   "packages": {
     "react-responsive-modal": {
       "package-name": "react-responsive-modal",
       "release-type": "node",
-      "changelog-sections": "[{\"type\":\"feat\",\"section\":\"Features\",\"hidden\":false},{\"type\":\"fix\",\"section\":\"Bug Fixes\",\"hidden\":false},{\"type\":\"chore\",\"section\":\"Miscellaneous\",\"hidden\":false},{\"type\":\"docs\",\"section\":\"Documentation\",\"hidden\":false},{\"type\":\"test\",\"section\":\"Tests\",\"hidden\":false}]"
+      "changelog-sections": [
+        { "type": "feat", "section": "Features", "hidden": false },
+        { "type": "fix", "section": "Bug Fixes", "hidden": false },
+        { "type": "chore", "section": "Miscellaneous", "hidden": false },
+        { "type": "docs", "section": "Documentation", "hidden": false },
+        { "type": "test", "section": "Tests", "hidden": false }
+      ]
     }
   }
 }
